[package]
name = "runjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.42", features = ["transpiling"] }
deno_core = "0.311"
deno_runtime = "0.180.0"
deno_fs = "*"
reqwest = "0.12"
tokio = { version = "1.36", features = ["full"] }
num_cpus = "1.16.0"
rand = "0.7.3"
lazy_static = "^1.4.0"

[build-dependencies]
deno_core = "0.311"
deno_runtime = "0.180.0"
