[package]
name = "runjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.44.0", features = ["transpiling"] }
deno_core = "0.334.0"
deno_error = "0.5.6"
reqwest = "0.12"
tokio = { version = "1.40", features = ["full"] }

[build-dependencies]
deno_core = "0.334"
